RESOLVED FIXED21080
Crash below Function.apply when using a runtime array as the argument list
https://bugs.webkit.org/show_bug.cgi?id=21080
Summary Crash below Function.apply when using a runtime array as the argument list
Sam Weinig
Reported 2008-09-24 16:57:31 PDT
Patch forthcoming.
Attachments
patch (5.98 KB, patch)
2008-09-24 17:02 PDT, Sam Weinig
darin: review+
Sam Weinig
Comment 1 2008-09-24 17:02:14 PDT
Darin Adler
Comment 2 2008-09-24 17:05:28 PDT
Comment on attachment 23772 [details] patch r=me
Sam Weinig
Comment 3 2008-09-24 17:08:04 PDT
Fixed in r36875.
Note You need to log in before you can comment on or make changes to this bug.